--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "mongoose": "^8.5.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
