--- a/kursovoi-backend-new/package.json
+++ b/kursovoi-backend-new/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auth-backend",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "main": "src/server.js",
   "scripts": {
@@ -9,15 +9,15 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-session": "^1.17.3",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-github2": "^0.1.12"
   }
 }
